# computer-vision-endless-runner

./: .gitignore  README.md  requirements.txt  test.py
src/: game.py  main.py  optical_flow.py  sections.py  tracking.py
src/bgs/: bgs.py  compare.py  knn.py  mog2.py
src/bindings/: build.txt
src/bindings/libhog/: CMakeLists.txt
src/bindings/libhog/include/: HOG.h
src/bindings/libhog/src/: hog_binding.cpp
src/bindings/tracking/: CMakeLists.txt  build.txt
src/bindings/tracking/include/: PersonDetector.h  PersonTracker.h
src/bindings/tracking/src/: bindings.cpp
src/cv/: bgs.py
src/cv/algo/: tracking.py
src/cv/svm/: train_svm.py
src/cv/tracking/: Metric.py  associate.py  bbox_utils.py  track.py  tracker.py
src/cv/utils/: color.py  crop.py  iou.py
src/entities/: Character.py  Coin.py  Obstacle.py  Trail.py
src/hog/: build.txt  hog.pyx  setup.py
src/hog/libhog/: CMakeLists.txt
src/hog/libhog/include/: draw_new.h  hog.h  hoghistogram.h
src/hog/libhog/src/: draw_new.cpp  hog.cpp  hog_binding.cpp
src/tiles/: Tilemap.py  Tileset.py
src/utils/: constants.py  sections.py
test/milestone2/: compare_algorithms.py  test_compare_thresholds.py
test/milestone2/results/csv/: static_bg.csv  static_bg_dark.csv  static_bg_dark_with increase_and_decrease_of_light.csv
test/results/csv/: dynamic_bg.csv  static_bg_darkened.csv
